updated the home page feature image layout. Resized images to enhance new layout. Added two new images to the layout to remove extra white space on larger monitors and generally fill the space more. Swapped swimsuit image as resizing wasn't asthetically pleasing. fixed the spacing issue where the scroll bar covered the search box and shopping cart logo.

--- a/css/blog-test.css
+++ b/css/blog-test.css
@@ -8,6 +8,7 @@
 
 .blog-row {
     background-color: #dddddd;
+    margin: auto;
 }
 
 .blog-column {
@@ -19,9 +20,10 @@
   }
   
   .blog-left {
-    width: 60%;
+    width: 70%;
     font-size: 1em;
     margin: 0 auto;
+    padding: 40px;
   }
 
   .blog-left h3 {
@@ -32,6 +34,7 @@
     width: 30%;
     font-size: 0.8em;
     margin: 0 auto;
+    padding: 40px;
   }
   
   /* Clear floats after the columns */
