--- a/css/body.css
+++ b/css/body.css
@@ -1,7 +1,7 @@
 .clear{
     clear:right;
   }
-
+/*
 .photo-grid-container{
   display: flex;
   overflow: auto;
@@ -26,4 +26,60 @@
   content: "";
   display: table;
   clear: both;
+}
+
+*/
+
+* {
+  box-sizing: border-box;
+}
+
+
+/* Center website */
+.main {
+  max-width: 1000px;
+  margin: auto;
+}
+
+.feature-row {
+  margin: 8px -16px;
+}
+
+/* Add padding BETWEEN each column (if you want) */
+.feature-row,
+.feature-row > .feature-column {
+  padding: 8px;
+}
+
+/* Create four equal columns that floats next to each other */
+.feature-column {
+  float: left;
+  width: 25%;
+}
+
+/* Clear floats after rows */ 
+.feature-row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Content */
+.feature-content {
+  background-color: white;
+  padding: 10px;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 900px) {
+  .feature-column {
+    width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .feature-column {
+    width: 100%;
+  }
 }
